# jarvis

./: .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
configs/: main_ingestion.yml
minio_data/.minio.sys/: format.json
pipelines/: ingestion_pipeline.py
qdrant_data/: raft_state.json
scripts/: data_warehouse.py  run.py
src/jarvis/: main.py  settings.py
src/jarvis/application/: base.py  embeddings.py  factories.py  ingestion.py  processing.py
src/jarvis/application/preprocessing/: chunking_data_handlers.py  dispatchers.py  embedding_data_handlers.py  parsing_data_handlers.py  processing_data_handlers.py
src/jarvis/domain/: books.py  chunks.py  documents.py  embedded_chunks.py  mapping.py  queries.py  types.py
src/jarvis/domain/base/: __init__.py  vector.py
src/jarvis/infrastructure/: llm_clients.py  storage_client.py  vector_db_client.py
src/jarvis/rag/: base.py  prompt_templates.py  query_expansion.py
steps/ingestion/: __init__.py  chunk_and_embed.py  fetch_from_storage.py  load_into_vector_db.py  parse_and_structure.py  structure_documents.py
