[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.43",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "typer>=0.19.2",
    "zenml>=0.90.0",
]

[project.scripts]
jarvis = "jarvis.main:app"